@@ -64,6 +64,17 @@ later releases.</p>
 &lt;/form&gt;
 </pre>
 </div>
+<div class="section" id="windows-problems-and-tidy">
+<h1><a name="windows-problems-and-tidy">5. Windows problems and tidy</a></h1>
+<p>If you get the error message</p>
+<pre class="literal-block">
+The process cannot access the file because it is being used by another process.
+</pre>
+<p>on Windows, try turning 'tidy' processing off:</p>
+<blockquote>
+config use_tidy 0</blockquote>
+<p>(and report it to the list if this does or does not solve the problem!)</p>
+</div>
 </div>
 </body>
 </html>
